# popcoord

./: .gitignore  CHANGELOG.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/popcoord/: __init__.py  core.py  demographics.py  density.py  models.py  population.py
src/popcoord/sources/: __init__.py  ghspop_cog.py  worldpop_api.py  worldpop_cog.py
tests/: test_popcoord.py
